# antsibull-core

./: .flake8  .git-blame-ignore-revs  .pylintrc.automated  CHANGELOG.md  CHANGELOG.rst  README.md  antsibull.cfg  codecov.yml  lint-flake8.sh  lint-mypy.sh  lint-pylint.sh  lint-pyre.sh  mypy.ini  noxfile.py  pyproject.toml  test-pytest.sh
.github/workflows/: antsibull-build.yml  antsibull-docs.yml  antsibull.yml  nox.yml  pythonlinters.yml  pythontests.yml  reuse.yml
LICENSES/: PSF-2.0.txt
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 1-cleanup.yml  1.0.0.yml  1.5.1.yml  1.6.0.yml  1.7.0.yml  10-python_requires.yml  103-312.yaml  109-typing.yml  11-copy-fix.yml  113-subprocess_util_loopback.yaml  116-subprocess_util_escape.yaml  119-nosh.yaml  122-pydanticv2.yaml  128-libcontext-appcontext.yml  129-deprecated-compat.yaml  13-no-blocking-io-async.yaml  130-old-ansible-dep.yaml  130-old-ansible-rm.yaml  131-galaxy-client-context.yml  135-trust-core-cache.yml  14-StrOrBytesPath.yaml  158-ansible-core-pypi.yml  16-compat-deprecation.yml  160-asyncio-timeouterror.yml  161-context.yml  163-aiohttp-timeout.yml  165-write-file-sanitize.yml  166-antsibull-fileutils.yml  168-collection-meta.yml  169-pydantic.yml  172-removal-schema.yml  173-schema-removal.yml  174-removed-in-previous.yml  177-removal-updates.yml  188-logging.yml  191-python.yml  198-robustness.yml  2.0.0.yml  2.0.0a1.yml  2.0.0a2.yml  (+28 more)
src/antsibull_core/: __init__.py  ansible_core.py  app_context.py  args.py  collection_meta.py  collections.py  compat.py  config.py  dependency_files.py  filesystem.py  galaxy.py  logging.py  pydantic.py  subprocess_util.py  tarball.py  venv.py  yaml.py
src/antsibull_core/schemas/: __init__.py  collection_meta.py  config.py  context.py  validators.py
src/antsibull_core/utils/: __init__.py  collections.py  hashing.py  http.py  io.py
stubs/: argparse.pyi
tests/functional/: aiohttp_utils.py  certificate_utils.py  test_collection_meta.py  test_dependency_files.py  test_galaxy.py  test_logging.py  test_venv.py
tests/units/: test_ansible_core.py  test_context.py  test_parse_pieces.py  test_subprocess_util.py  test_utils_hashing.py  test_utils_io.py
