# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antsibull-core"
version = "2.0.0"
description = "Tools for building the Ansible Distribution"
license = "GPL-3.0-or-later AND BSD-2-Clause AND MIT AND PSF-2.0"
license-files = {globs=["LICENSES/*.txt"]}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Ansible",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "aiofiles",
    "aiohttp >= 3.0.0",
    "build",
    # major/minor was introduced here
    "packaging >= 20.0",
    "perky",
    # pydantic v2 is a major rewrite
    "pydantic >= 1.0.0, < 2.0.0",
    "PyYAML",
    "semantic_version",
    # sh v2 has breaking changes.
    # https://github.com/ansible-community/antsibull-core/issues/34
    "sh >= 1.0.0, < 2.0.0",
    # 0.5.0 introduces dict_config
    "twiggy >= 0.5.0",
]


[[project.authors]]
name = "Toshio Kuratomi"
email = "a.badger@gmail.com"

[[project.authors]]
name = "Felix Fontein"
email = "felix@fontein.de"

[[project.maintainers]]
name = "Felix Fontein"
email = "felix@fontein.de"

[[project.maintainers]]
name = "Maxwell G"
email = "maxwell@gtmx.me"

[project.urls]
"Source code" = "https://github.com/ansible-community/antsibull-core"
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-core/issues"

[project.optional-dependencies]
codeqa = [
    "antsibull-changelog",
    "flake8 >= 6.0.0",
    "pylint >= 2.15.7",
    "reuse",
]
coverage = [
    "coverage[toml]",
]
formatters = [
    "black",
    "isort",
]
test = [
    "asynctest",
    "cryptography",
    "pytest",
    "pytest-asyncio >= 0.20",
    "pytest-cov",
    "pytest-error-for-skips",
]
typing = [
    "mypy",
    # https://github.com/facebook/pyre-check/issues/398
    "pyre-check >= 0.9.17",
    "types-aiofiles",
    "types-PyYAML",
]
dev = [
    # Used by nox sessions
    "antsibull-core[codeqa]",
    "antsibull_core[coverage]",
    "antsibull-core[formatters]",
    "antsibull-core[test]",
    "antsibull-core[typing]",
    # misc
    "nox",

]

[tool.isort]
profile = "black"
line_length = 89
multi_line_output = 3
include_trailing_comma = true

[tool.coverage.report]
# https://coverage.readthedocs.io/en/latest/excluding.html#advanced-exclusion
# These should use single quotes in TOML, as they're regular expressions.
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'if t.TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.mypy]
mypy_path = "stubs/"

[[tool.mypy.overrides]]
module = "semantic_version"
ignore_missing_imports = true
