# Copyright (c) Ansible Project
# GNU General Public License v3.0+ (see LICENSES/GPL-3.0-or-later.txt or https://www.gnu.org/licenses/gpl-3.0.txt)
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "antsibull-core"
version = "1.6.0"
description = "Tools for building the Ansible Distribution"
authors = ["Toshio Kuratomi <a.badger@gmail.com>", "Felix Fontein <felix@fontein.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansible-community/antsibull-core"
packages = [
    { include = "antsibull_core", from="src" },
    { include = "tests", format = "sdist" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Ansible",
    "Intended Audience :: Developers"
]

[tool.poetry.urls]
"Code of Conduct" = "https://docs.ansible.com/ansible/latest/community/code_of_conduct.html"
"Bug tracker" = "https://github.com/ansible-community/antsibull-core/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
aiocontextvars = {version = "*", python = "~3.6"}
aiofiles = "*"
aiohttp = ">= 3.0.0"
importlib-metadata = {version = "*", python =  "<3.8"}
# major/minor was introduced here
packaging = ">= 20.0"
perky = "*"
# pydantic v2 is a major rewrite
pydantic = ">= 1.0.0 < 2.0.0"
PyYAML = "*"
semantic_version = "*"
sh = ">= 1.0.0 < 2.0.0"
# 0.5.0 introduces dict_config
twiggy = ">= 0.5.0"

[tool.poetry.dev-dependencies]
asynctest = "*"
cryptography = "*"
flake8 = ">= 3.8.0"
mypy = "*"
# https://github.com/facebook/pyre-check/issues/398
pyre-check = "^0.9.15"
pylint = "^2.12.0"
pytest = "*"
pytest-asyncio = ">= 0.12"
pytest-cov = "*"
types-aiofiles = "*"
types-PyYAML = "*"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
